<resources>
    <string name="app_name">Elections</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">loginActivity</string>
    <string name="login">Login</string>
    <string name="reg">Register</string>
    <string name="hello">Hello</string>
    <string-array name="voter_cadidate">
        <item>Voter</item>
        <item>Candidate</item>
    </string-array>
    <string name="enter_adhar">Enter ADHARNO</string>
    <string name="password">Password</string>
    <string name="not_reg">Not a registered voter?</string>
    <string name="title_activity_otp">OTPActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="verify">Verify</string>
</resources>

