<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="550dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="302dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter2"
        tools:ignore="UnknownId" />

    <Button
        android:id="@+id/reg_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="163dp"
        android:layout_marginTop="157dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="98dp"
        android:text="@string/reg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="169dp"
        android:layout_height="31dp"
        android:layout_marginStart="214dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="28dp"
        android:entries="@array/voter_cadidate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/background"
        android:layout_width="448dp"
        android:layout_height="294dp"
        android:layout_marginTop="128dp"
        android:background="@drawable/box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/enter_adhar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="150dp"
        android:text="@string/enter_adhar"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/background" />

    <EditText
        android:id="@+id/enter1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="79dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="79dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/enter_adhar"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/background"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_adhar" />

    <EditText
        android:id="@+id/enter2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="500dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="116dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/password"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/not_registered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="134dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="133dp"
        android:text="@string/not_reg"
        android:textColor="#1C2761"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/background" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="450dp"
        android:layout_marginTop="28dp"
        android:text="@string/password"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter1" />

    <EditText
        android:id="@+id/enter_adhar_for_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/enter_adhar"
        tools:layout_editor_absoluteX="98dp"
        tools:layout_editor_absoluteY="516dp" />

</android.support.constraint.ConstraintLayout>